full revision draft

--- a/writing/Cubert/revision/Cubert cover letter.tex
+++ b/writing/Cubert/revision/Cubert cover letter.tex
@@ -57,7 +57,7 @@ Department of Psychology\\
 Stanford University\\
 Stanford, CA 94305\\[20pt]
 
-\noindent December XXX, 2016\\[20pt]}
+\noindent December 19, 2016\\[20pt]}
 
 
 \noindent Dear Editor,\\
@@ -84,7 +84,7 @@ We now cite the suggested research and stress that our contribution is indeed a 
 
 \item \emph{Reviewer 2 recommends highlighting the novel contribution of the speaker's epistemic state.}
 
-\gcs{say something} Reviewer 2's point 2.
+We highlight both the role of contextual predictability and speaker knowledge in our account of ambiguity resolution (cf.~our response to Reviewer 2's point 2 below).
 
 \item \emph{Reviewer 1 was concerned that the effects of contextual predictability were only tested on a limited set of words and contexts.}
 
@@ -96,7 +96,7 @@ We have replaced most of our bar plots with the more informative violin plots th
 
 \item \emph{Reviewer 3 raised an alternative account of subjects' interpretation of `tall' in regular vs. irregular contexts.}
 
-The reviewer raised the issue of how the likely truth of a given interpretation might affect its probability: interpretations that are more obviously true should be more probable. We explore this idea in our new experiment (\emph{Expt.~4: Generalizing our findings}; cf.~our response to the Editor's point 6 above), and find that an interpretation's probability of being judged true affects that interpretation's overall probability. We expand on this point below in our responses to Reviewer 1's point 1 and Reviewer 3's point XXX.
+The reviewer raised the issue of how the likely truth of a given interpretation might affect its probability: interpretations that are more obviously true should be more probable. We explore this idea in our new experiment (\emph{Expt.~4: Generalizing our findings}; cf.~our response to the Editor's point 6 above), and find that an interpretation's probability of being judged true affects that interpretation's overall probability. We expand on this point below in our responses to Reviewer 1's point 1 and Reviewer 3's point 14.
 
 \een
 
@@ -144,7 +144,7 @@ All of the previous experimental work that the reviewer mentions investigates po
 
 \item \emph{The authors should highlight the role of the speaker's epistemic state.}
 
-\gcs{we put epistemic state and contextual noise on equal footing}
+Our experiments identified roles for contextual predictability and speaker access to knowledge in the resolution of ambiguity in plural predication; we highlight both factors throughout the paper. By more clearly motivating the speaker knowledge experimental manipulation (cf.~our response to Reviewer 2's point 22 below), we further highlight the role of the speaker's epistemic state.
 
 \item \emph{The authors set up the contrast between distributive and collective interpretations without mentioning the possibility of cumulative interpretations. This reading should be mentioned.}
 
@@ -193,7 +193,7 @@ The relative availability of collective interpretations for \emph{big} and \emph
 
 \item \emph{Abstract: The authors say that ``plural predication'' is a source of ambiguity, or should be disambiguated, but what is being disambiguated? Is it the plural predication, or the proposition, or the sentence level? (I revisit this issue of the locus of ambiguity below.)}
 
-\gcs{say something}
+We treat the ambiguity at the utterance level, so that the full sentence gets disambiguated.
 
 \item \emph{Abstract: The phrase ``stubborn distributivity'' should be attributed to Schwarzschild, as it is in the main text.}
 
@@ -235,7 +235,7 @@ We now motivate this manipulation in Section 2.2, and preview it earlier in at t
 
 \item \emph{Pg.~9: The sentence, ``The boxes each were big'' doesn't seem entirely natural to me. More natural would be, ``The boxes were each big.'' I'm assuming the authors wanted the words each and together to appear in the same syntactic position, and that is why they created the sentences in this way, but if that is the case, they should say so, in order to justify their choice of a non-default description that seems slightly unnatural.}
 
-As the reviewer suspected, we chose the post-NP \emph{each} order to minimize the differences between the \emph{each} and \emph{together} paraphrases, and we used post-NP \emph{together} for the reasons discussed above (cf.~our responses to Reviewer 2's points XXX). It isn't clear that either \emph{each} order stands as the default, so we are reluctant to label either as non-default. Indeed, none of our participants expressed concern about the wording of our \emph{each} paraphrase.
+As the reviewer suspected, we chose the post-NP \emph{each} order to minimize the differences between the \emph{each} and \emph{together} paraphrases, and we used post-NP \emph{together} for the reasons discussed above (cf.~our responses to Reviewer 2's points 1 and 4 above). It isn't clear that either \emph{each} order stands as the default, so we are reluctant to label either as non-default. Indeed, none of our participants expressed concern about the wording of our \emph{each} paraphrase.
 	
 \item \emph{Pg.~10: Missing the word \emph{accessed} in the first sentence of section 2.4 (\emph{participants chose the collective referent, and therefore accessed the collective interpretation}).}
 
@@ -271,7 +271,7 @@ So that we could get a sample of occurrences of plural predication, we intention
 
 \item \emph{Pg.~14-18: The full list of sentences from Experiments 2a, 2b should be provided in an appendix.}
 
-\gcs{Should we do this, or point out that the paper is already too long and the full set of sentences appears in the relevant figures?}
+While the full set of sentences can be read off from figures 4 and 6 and we are reluctant to lengthen our already-long manuscript, we have added the requested appendix (\emph{Appendix E: Materials from Experiment 2}).
 
 \item \emph{Pg.~14: I'm worried about a circularity in the design of Experiment 2. The authors found highly frequent instances of the sentence template \emph{The NOUNS were ADJ} and created additional examples from these. Participants then chose a paraphrase for these examples. But if the participants are encountering highly frequent examples in the experiment, which presumably have an interpretation paired with them, then aren't they identifying that frequently-intended interpretation in this task?}
 
@@ -315,32 +315,32 @@ The leftmost point on the scale (corresponding to `definitely not') was coded as
 
 \item \emph{Pg.~29: The authors should explain what they mean by saying that the collective and distributive senses are `vague expressions.'}
 
-\gcs{say something}
+These expressions are vague in the sentence that their degree threshold is underspecified. The reader is referred to Lassiter and Goodman 2013 for the specifics of this proposal, which we adopt.
 
 \item \emph{Pg.~31: The authors' point that the speaker ``chooses an utterance u that would most effectively communicate some state s to a literal listener'' seems to me to indicate that the speaker will take
 into account morphosyntactic and structural information when doing so, which is a point that Syrett \& Musolino (2015) have made when discussing the disambiguation of sentences with possible collective and distributive senses. The authors do not really discuss such structural/surface level cues, but should acknowledge them, because they figure into the form of the utterance chosen by the speaker.}
 
-\gcs{say something}
+We now cite Syrett \& Musolino when we mention the surface-level cues ``each'' and ``together'' in the discussion of our model results.
 
 \item \emph{Pg.~31: The authors say that the speaker's belief distribution about the state of the world depends on ``some observations o of the true world.'' Is this way of phrasing things meant to privilege perceptual over conceptual information?}
 
-\gcs{say something}
+We are indeed focused on perceptually-acquired information about the state in our speaker-knowledge manipulation.
 
 \item \emph{Pg.~32: Why is the variability of the context considered a semantic factor?} 
 
-\gcs{say something}
+We label contextual predictability a semantic factor because we treat it is a property of individual predicates (or, more precisely, of the collective properties named by individual predicates).
 
 \item \emph{Pg.~32: Please explain the degrees in section 5.2.}
 
-\gcs{say something}
+We have clarified that these degrees correspond to object size, weight, or height.
 
 \item \emph{Pg.~34: The wording ``an old observation about collective interpretations for gradable predicates with plural subjects'' makes me wonder at what level the authors see the ambiguity being encoded (the VP level or the sentence level), so it might be helpful to add a note somewhere about this, since there have been different approaches to the semantic treatment of the collective/distributive ambiguity over the years. (The comment in the top paragraph on pg.~38 about the locus of ambiguity is also related to this point.)}
 
-\gcs{say something}
+We have treated ambiguity resolution at the level of full utterances (cf.~our response to Reviewer 2's point 12 above).
 
 \item \emph{Pg.~36: The authors suggest that, ``stubbornly distributive predicates name collective properties that are difficult to accurately communicate.'' By this point in the paper, I am so far from convinced that the participants are really accessing a true collective reading, that on this page, I am not on board with the conclusions, and am certainly not in agreement with this claim, even though I do agree with the authors that the context is able to bring out readings that are otherwise suppressed, and I think the experiments presented in the paper do a nice job of showing that this is the case. Whether or not these non-strictly-distributive readings can really be taken to be collective readings is another matter.}
 
-\gcs{say something}
+We hope that our revisions and responses to the reviewer's comments will help the reviewer more clearly see through to our conclusions.
 
 \item \emph{Pg.~38: I would think that if the noun phrase is construed as an aggregate (i.e., a single collection) instead of a group, then the predicate is no longer applying to the group, but rather to the collectivizer, in which case we return to the possibility that participants may have inserted a silent collectivizing noun into their interpretation of the sentences.}
 
@@ -361,7 +361,7 @@ We have removed this example.
 
 We chose to avoid discussing this straw-man hypothesis in order to keep focus on our actual hypothesis and in an attempt to keep our already-too-long paper short.
 
-\item \emph{p. 5 top: The logic in this paragraph is hard to follow. Initially I didn't understand why ``the collective use of tall would be more likely to mislead a listener than that of heavy'' -- if I say ``the boxes are tall'' and mean it distributively, surely that conveys that the boxes are in an arrangement such that they are tall? And if their arrangement *is* already in common ground, then what utility is there in saying they are tall?
+\item \emph{p.~5 top: The logic in this paragraph is hard to follow. Initially I didn't understand why ``the collective use of tall would be more likely to mislead a listener than that of heavy'' -- if I say ``the boxes are tall'' and mean it distributively, surely that conveys that the boxes are in an arrangement such that they are tall? And if their arrangement *is* already in common ground, then what utility is there in saying they are tall?
 Is the logic that there are many different ways in which the boxes could be tall, so ``tall'' is not very informative? 
 In RSA terms, it was helpful for me to think of this first p. at the level of L1, whereas the exposition here seems to be going back and forth between S1 and L1. I think I got confused because of things like ``collective interpretations will be avoided by speakers'' -- it's confusing to talk about speakers choosing an interpretation.}
 
@@ -413,7 +413,7 @@ The results of our new experiment (\emph{Expt.~4: Generalizing our findings}) ex
 
 \item \emph{p.~32: isn't alpha=7 fairly high for these models? In general, it would be nice to see some figures showing how ``the qualitative patterns reported below are robust to changes in these parameters and assumptions.''}
 
-There isn't yet a sense of what counts as high or low for the optimality parameter $\alpha$ in RSA models. Rather than discussing alternative parameter settings at length with accompanying plots, we chose to link to the full model, where the interested reader can manipulate the parameters and assumptions on their own.
+There isn't yet a sense of what counts as high or low for the optimality parameter $\alpha$ in RSA models. In an attempt to keep our paper at a manageable length, rather than discussing alternative parameter settings in detail with accompanying plots, we chose to link to the full model, where the interested reader can manipulate the parameters and assumptions on their own.
 
 \een
 
