--- a/writing/Cubert/revision/Cubert revision.tex
+++ b/writing/Cubert/revision/Cubert revision.tex
@@ -132,13 +132,13 @@
 %
 %\address{Address Here}
 
-\author{Gregory Scontras\corref{cor1}}
-\ead{scontras@stanford.edu}
-\ead[url]{http://web.stanford.edu/~scontras/}
-\author{Noah D.~Goodman\corref{cor2}}
+\author{Gregory Scontras$^{1,}$\corref{cor1}}
+\ead{g.scontras@uci.edu}
+\ead[url]{http://linguistics.uci.edu/scontras/}
+\author{Noah D.~Goodman\corref{cor2}$^{2}$}
 \cortext[cor1]{Corresponding author}
     
- \address{Stanford University}
+ \address{$^{1}$University of California, Irvine\\ $^{2}$Stanford University}
 
 %% \fntext[label3]{}
 
