fixed appendix ref

--- a/writing/Cubert/revision/Cubert revision.tex
+++ b/writing/Cubert/revision/Cubert revision.tex
@@ -1397,7 +1397,7 @@ Table \ref{expt3analysis} presents model coefficients for the full linear regres
 
 \section{Full linear regression models from Expt.~4}\label{expt4results}
 
-Tables \ref{expt4analysisa} and \ref{expt4analysisa} present model coefficients for the full linear regression models used in the analysis of Expt.~4. For each dimension, the models predict collective endorsement ratings from fixed effects for context and trial; for those dimensions with both positive- and negative-polarity adjectives, the models also included fixed effects of polarity and the interaction between polarity and context. The fixed effects predictors were centered before analysis.
+Tables \ref{expt4analysisa} and \ref{expt4analysisb} present model coefficients for the full linear regression models used in the analysis of Expt.~4. For each dimension, the models predict collective endorsement ratings from fixed effects for context and trial; for those dimensions with both positive- and negative-polarity adjectives, the models also included fixed effects of polarity and the interaction between polarity and context. The fixed effects predictors were centered before analysis.
 
 \begin{table}[htb] 
 	\renewcommand\thetable{D.1}
