--- a/writing/Cubert/revision2/Cubert cover letter2.tex
+++ b/writing/Cubert/revision2/Cubert cover letter2.tex
@@ -68,11 +68,11 @@ Stanford, CA 94305\\[20pt]
 
 \item \emph{Reviewer 2's first point really continues a concern from the previous review, questioning whether certain interpretations are really collective when properties are ascribed to pluralities, even with `together'.  It seems to me that you addressed this to some degree in your response to the reviewer where you discussed the properties you chose to investigate.  It seems that clarifying this issue in the text with a brief discussion may be beneficial.}
 
-Response
+We have followed your suggestion and repurposed some of the language from our previous response to the reviewer as we explicitly discuss this issue in Section 3.3 of the revision. We now use the murky meanings of collective action statements to motivate our narrow focus on gradable predicates like \emph{heavy} and \emph{big}.
 
 \item \emph{Reviewer 2's second major point and the minor points are more straightforward.}
 
-Response
+We have followed the suggestions from Reviewer 2's second point, and addressed the remaining small points.
 
 \item \emph{I also suggest that you prepare your raw data for archiving.}
 
@@ -93,11 +93,12 @@ Response
 
 \item \emph{The authors commented that I'm making ``certain atypical assumptions'' about collective interpretations. I do not think I am at all. A true collective interpretation arises, because the property is predicated of the plurality. They also misunderstood me to be saying that the collective interpretation entails the falsity of the distributive one. This was perhaps a result of unfortunate wording on my part. When I said that a ``true'' collective interpretation of the sentence \emph{The boys together were smiling} would be that ``the boys collectively created what can be truthfully described as a smiling event and no one boy has this property, while the group does'' I did not mean to imply that the distributive interpretation need necessarily be false; otherwise there would be no ambiguity. What I was trying to make clear was that the collective interpretation is one predicated of the group itself. So related to this point, is a sentence from the authors themselves on page 4: ``Collective predication arises when a property is ascribed directly to a plurality, rather than distributed among its members (Link 1983).'' This, of course, could be taken as saying (as above) that the distributive interpretation also does not hold, so perhaps the second clause is unnecessary (and misleading) here and should be dropped. But what exactly does it mean for the ``natives are friendly'' or ``the eyes are open'' or ``the men are guilty'' to have a collective interpretation if the property is predicated of the group? I'm honestly not trying to be difficult or dense here; I really don't understand how the predication is truly \emph{collective} in these cases, versus, e.g., a group of men collectively lifting a piano or a group of boxes being collectively heavy. I would almost like to request a baseline test asking participants to describe what ``The N together are ADJ'' means (a kind of open response task), to make sure that the post-nominal/pre-verbal \emph{together} really is highlighting a collective interpretation for participants, but I think this would be too much to ask, given the work the authors have already put in to this paper and the extra experiment they ran. I am mildly curious, however.}
 
-We have added to the start of Section 3.3
+We thank the reviewer for clarifying their previous point, which highlights that we are indeed broadly in agreement with each other. We also agree on the difficulty in precisely identifying the meanings of collective interpretations of statements like ``the natives were friendly.'' We now discuss this difficulty explicitly at the start of Section 3.3, where we motivate our narrow focus on gradable predicates like \emph{heavy} or \emph{big}. As we state in our revision, the measurement inherent to the semantics of these predicates delivers scalar interpretations that are more amenable to quantitative study. Moreover, there appears to be no disagreement on the disambiguating potential of ``each'' and ``together'' for these predicates, or on the meaning of the collective interpretations they would deliver. For now, we will leave the suggested free response task to future work, though we agree with the reviewer on its potential interest.
+
 
 \item \emph{I had mentioned that some predicates certainly must be stubbornly distributive at the lexical level: \emph{have brown eyes}, \emph{have blonde hair}, etc. The reviewers respond to this point, and say that these predicates ``necessitate distributive construals'' and call them ``so-called `distributive' predicates.'' They distinguish between these ``truly distributive predicates'' and ``stubbornly distributive predicates'' in the introduction, and say that for the latter, there is no conceptual barrier to thinking of the property collectively. This is clear in the introduction, but I think it might be mentioned somehow again in the General Discussion, so that it is clear that conclusions being made about ``stubbornly distributive predicates'' are about those that lend themselves to both a distributive and a collective interpretation, not only the former. (I'm not trying to be, well, ``stubborn'' about this; I think this is a really important distinction to be made clear.) It might be nice if the authors made a brief point about the acquisition problem the child faces in acquiring these predicates and the dimensions and properties they map onto, perhaps on page 5 of the paper. For example, could one argue that the child approaches the acquisition process thinking that predicates could potentially allow for both a distributive and a collective construal (predicating of either the individual or the group), but that our real-world knowledge simply rules that out for certain properties/dimensions, and this is part of what the learner has to acquire? Or could one instead argue that the child begins by predicating properties of individuals, and then learns that a group could have a property as well, and so has to figure out and generalize what kinds of properties lend themselves to both construals? I don't think this is a discussion the authors need to engage with, but it's an interesting issue to raise that would make their paper very appealing and relevant to acquisitionists interested in word learning and categories.}
 
-We have added a brief discussion of the distinction between ``stubbornly'' vs.~``truly'' distributive predicates to the start of Section 7, where we remind the reader that our focus is on the former class of predicates. We have also added mention of the acquisition problem to the location suggested by the reviewer (i.e., Section 1).
+We have added a brief discussion of the distinction between ``stubbornly'' vs.~``truly'' distributive predicates to the start of Section 7, where we remind the reader that our focus is on the former class of predicates. We have also added mention of the acquisition problem to the location suggested by the reviewer (i.e., to Section 1). We thank the reviewer for this suggestion, as we agree that the acquisition perspective further highlights the puzzle of stubborn distributivity.
 
 \item \emph{It might be nice if the quotation in Figure 2 read ``The boxes \{each/together\} were big!'' to emphasize that the participants could have heard either. (If this change is made, the caption will have to be altered accordingly, too.)}
 
