--- a/writing/Cubert/revision2/Cubert cover letter2.tex
+++ b/writing/Cubert/revision2/Cubert cover letter2.tex
@@ -57,7 +57,7 @@ Department of Psychology\\
 Stanford University\\
 Stanford, CA 94305\\[20pt]
 
-\noindent XXX, 2017\\[20pt]}
+\noindent June 30, 2017\\[20pt]}
 
 
 \noindent Dear Editor,\\
@@ -76,7 +76,7 @@ We have followed the suggestions from Reviewer 2's second point, and addressed t
 
 \item \emph{I also suggest that you prepare your raw data for archiving.}
 
-Response
+We have submitted our raw experimental data in CSV format with the revision.
 
 
 \een
