--- a/writing/Cubert/revision2/Cubert revision2.tex
+++ b/writing/Cubert/revision2/Cubert revision2.tex
@@ -215,7 +215,7 @@ Note that stubbornly distributive predicates like \emph{big} or \emph{tall} cont
 \ex. \a. The group of men has blue eyes. 
 	\b. The pile of boxes is tall.
 
-Rather than roaming the lexicon with name tags specifying their attitudes toward collective interpretations \gcs{(a state awfully difficult for a child to acquire)}, something about these predicates or the properties they name must influence or determine their behavior in plural predication. The task at hand is to determine what that thing is.
+Rather than roaming the lexicon with name tags specifying their attitudes toward collective interpretations {(a state awfully difficult for a child to acquire)}, something about these predicates or the properties they name must influence or determine their behavior in plural predication. The task at hand is to determine what that thing is.
 
 We suggest that the key underlying notion is the stability or \emph{contextual predictability} of a property when applied to a collection.\footnote{See \citeauthor{schein} (\emph{forthcoming}; ch.~4.1.1) for a similar line of reasoning; \citeauthor{schein} frames his observation in a Neo-Davidsonian event-semantic framework.}
 That is, there are aspects of context that affect the computation of collective properties, over and above those that affect the individual properties; when there is more uncertainty about these aspects of context, the collective property is less stable.
@@ -614,7 +614,7 @@ Finally, \emph{heavy}; here, \emph{bags} received the highest collective endorse
 
 We have extended our paraphrase methodology beyond a simple reference task, using naturally-occurring examples of plural predications.
 % Our goals here were modest: to understand better the terrain of interpretation preferences for plural predications, without special attention to particular classes of predicates or subjects. Participants demonstrated full use of the paraphrase endorsement rating scales provided. Moreover, 
-The pattern of ratings sheds some light on the status of stubborn distributivity. Perhaps most striking is the absence of clear groupings of predicates in the results of Expt.~2a: one would be hard-pressed to read stubborn distributivity (or complaisant collectivity) off the gradient of ratings in Fig.~\ref{sentence-coll}. \gcs{Still, one might wonder about the precise meanings of the collective interpretations of some of our sentences, for example ``the boys together were smiling'' or ``the natives together were friendly.'' To obviate the murky evaluation criteria of collective action statements like these, we have chosen to consider in detail a specific class of predicates with (relatively) objective evaluation strategies: gradable adjectives like \emph{heavy} or \emph{big}.\footnote{This is not to say that we know nothing about collective action statements. For example, Margaret Gilbert's Plural Subject Theory makes great gains on this ground in the domain of social philosophy \citep[for a recent overview, see][]{gilbert2013}.} The measurement inherent to the semantics of these predicates delivers scalar interpretations that are more amenable to quantitative study. By examining intuitions about the use of these predicates, together with the predication context that delivers them, we stand to better understand the mechanism of plural predication: when collective interpretations are appropriate, what they communicate, and what mediates the choice between distributive and collective interpretations in the first place.}
+The pattern of ratings sheds some light on the status of stubborn distributivity. Perhaps most striking is the absence of clear groupings of predicates in the results of Expt.~2a: one would be hard-pressed to read stubborn distributivity (or complaisant collectivity) off the gradient of ratings in Fig.~\ref{sentence-coll}. {Still, one might wonder about the precise meanings of the collective interpretations of some of our sentences, for example ``the boys together were smiling'' or ``the natives together were friendly.'' To obviate the murky evaluation criteria of collective action statements like these, we have chosen to consider in detail a specific class of predicates with (relatively) objective evaluation strategies: gradable adjectives like \emph{heavy} or \emph{big}.\footnote{This is not to say that we know nothing about collective action statements. For example, Margaret Gilbert's Plural Subject Theory makes great gains on this ground in the domain of social philosophy \citep[for a recent overview, see][]{gilbert2013}.} The measurement inherent to the semantics of these predicates delivers scalar interpretations that are more amenable to quantitative study. By examining intuitions about the use of these predicates, together with the predication context that delivers them, we stand to better understand the mechanism of plural predication: when collective interpretations are appropriate, what they communicate, and what mediates the choice between distributive and collective interpretations in the first place.}
 
 %The fact that disambiguation preferences differ by subject noun, not only by predicate further shifts the theoretical focus from lexical classes of predicates. If a plural predication can be more or less collective depending on the subject, then we must look at least partly to context in order to understand interpretation preferences.
 %After considering the full set of sentences, we narrowed our focus to those predicates occurring in more than one sentence (i.e., with different subject nouns). Narrower still, 
@@ -1163,7 +1163,7 @@ we would not want to claim that the model uniquely, quantitatively predicts the 
 
 \section{General discussion}
 
-We began with an old observation about collective interpretations for gradable predicates with plural subjects: some predicates admit collective interpretations, while others strongly (or totally) resist them. \gcs{The puzzle is made even more pronounced by the lack of conceptual barriers to the collective construals of these predicates (cf.~the truly distributive predicates like \emph{be a man} or \emph{have blue eyes}).} This phenomenon, dubbed ``stubborn distributivity'' after those gradable predicates that ostensibly refuse collective interpretations, has been documented and described, even characterized in terms of semantic constraints.  Still, an explanation of the phenomenon has proven elusive. Here, we offer an explanation: stubbornly distributive predicates are so because the collective properties they name are unpredictable, or unstable, in most contexts; this unpredictability results in a noisy collective interpretation, something speakers and listeners recognize as ineffective for communicating efficiently about their world.
+We began with an old observation about collective interpretations for gradable predicates with plural subjects: some predicates admit collective interpretations, while others strongly (or totally) resist them. {The puzzle is made even more pronounced by the lack of conceptual barriers to the collective construals of these predicates (cf.~the truly distributive predicates like \emph{be a man} or \emph{have blue eyes}).} This phenomenon, dubbed ``stubborn distributivity'' after those gradable predicates that ostensibly refuse collective interpretations, has been documented and described, even characterized in terms of semantic constraints.  Still, an explanation of the phenomenon has proven elusive. Here, we offer an explanation: stubbornly distributive predicates are so because the collective properties they name are unpredictable, or unstable, in most contexts; this unpredictability results in a noisy collective interpretation, something speakers and listeners recognize as ineffective for communicating efficiently about their world.
 On this pragmatic account, stubborn distributivity does not form a distinct category; rather, there is a gradient of stubbornness. Moreover, the extent that collective interpretations are drawn should be sensitive to contextual factors.
 
 %Having both demonstrated and quantified the role of contextual predictability and speaker knowledge in plural predication, we then formalized the role of each factor in a computational model of communication. Our model, conceived within the Rational Speech-Act framework, employed a standard semantics to achieve not only accurate qualitative, but accurate quantitative predictions of our human data. Speaker knowledge affected collective interpretations by removing epistemic support and thereby decreasing a speaker's utility for distributive interpretations. Contextual predictability had a similar effect: noisier collective interpretations are less effective at correctly communicating about the world; being less useful, they are less likely.
